[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-cipher-suite"
version = "0.1.0"
description = "Educational Python cipher collection with CLI and GUI entry points"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "therudywolf" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.2"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cipher_suite*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
